# jetson_car

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  dds
documentation_templates/: package_documentation.md
drivers/carHWComTest/: CMakeCache.txt  CMakeLists.txt  Makefile  carHWComTest  cmake_install.cmake  main.cpp  racecar_arduino_com.cpp
drivers/carHWComTest/build-dir/: carHWComTest
drivers/carHWComTest/racecar_hardware_interface/: racecar_arduino_com.h
drivers/classes/PMBus/: PMBus.py
drivers/classes/ms5837/ms5837-python/: ms5837.py
drivers/keras_tools/: convert_to_python3.py
jetson_hardware_ws/src/hardware_controller/: CMakeLists.txt  package.xml
jetson_hardware_ws/src/hardware_controller/src/: hardware_controller.cpp  hardware_controller.py
jetsoncar_ros2_ws/: imgui.ini  model_pub_topic.txt
jetsoncar_ros2_ws/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.sh  setup.sh
jetsoncar_ros2_ws/log/: latest_build
jetsoncar_ros2_ws/src/: setup.cfg
jetsoncar_ros2_ws/src/_bno055/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jetsoncar_ros2_ws/src/_bno055/msg/: Bno055.msg
jetsoncar_ros2_ws/src/_bno055/src/: bno055_ros.py
jetsoncar_ros2_ws/src/ai_drivers/: package.xml  setup.cfg  setup.py
jetsoncar_ros2_ws/src/ai_drivers/ai_drivers/: data_collector.py  model_loader.py  sim_bridge.py  tensorrt_tools.py
jetsoncar_ros2_ws/src/ai_drivers/config/: data_collector_config.yaml  model_loader_config.yaml
jetsoncar_ros2_ws/src/bno055/: CMakeLists.txt  package.xml  setup.py
jetsoncar_ros2_ws/src/bno055/msg/: Bno055.msg
jetsoncar_ros2_ws/src/bno055/src/: bno055_ros.py
jetsoncar_ros2_ws/src/launch_files/: CMakeLists.txt  package.xml
jetsoncar_ros2_ws/src/launch_files/config/: realsense_config.yaml
jetsoncar_ros2_ws/src/launch_files/launch/: jetsoncar.launch.py  jetsoncar_carla_sim.launch.py
jetsoncar_ros2_ws/src/racecar_control/: package.xml  setup.cfg  setup.py
jetsoncar_ros2_ws/src/racecar_control/config/: mux_config.yaml
jetsoncar_ros2_ws/src/racecar_control/launch/: racecar_control.launch.py
jetsoncar_ros2_ws/src/racecar_control/perspectives/: jetsoncar.perspective
jetsoncar_ros2_ws/src/racecar_control/racecar_control/: control_mux.py
jetsoncar_ros2_ws/src/usb_hw_interface/: CMakeLists.txt  package.xml
jetsoncar_ros2_ws/src/usb_hw_interface/src/: hw_interface.cpp  racecar_arduino_com.cpp
jetsoncar_ws/realsense2_description/urdf/: _d415.urdf.xacro  _d435.urdf.xacro
jetsoncar_ws/src/bno055/: README.md
jetsoncar_ws/src/bno055/src/: README.md  bno055_ros.py
jetsoncar_ws/src/drivers/: README.md
jetsoncar_ws/src/drivers/hal/: CMakeLists.txt  README.md  package.xml  setup.sh  setup_python2.sh
jetsoncar_ws/src/drivers/nn_tools/: CMakeLists.txt  package.xml
jetsoncar_ws/src/drivers/rosey/: CMakeLists.txt  package.xml
jetsoncar_ws/src/drivers/rosey2/: CMakeLists.txt
jetsoncar_ws/src/drivers/rosey3/: CMakeLists.txt  package.xml
jetsoncar_ws/src/duckietown_description/: CMakeLists.txt  model.config  package.xml
jetsoncar_ws/src/duckietown_description/meshes/: base.dae  battery.dae  camera.dae  ducky.dae  rubber_duck_ori.dae  wheel.dae  wheel_inv.dae
jetsoncar_ws/src/duckietown_description/meshes/duck/: model.dae
jetsoncar_ws/src/duckietown_description/meshes/ferrari/: model.dae
jetsoncar_ws/src/duckietown_description/meshes/led/: model.dae
jetsoncar_ws/src/duckietown_description/meshes/rubber_duck_new/: rubber_duck.dae
jetsoncar_ws/src/duckietown_description/robots/: duckietown.gazebo.xacro  duckietown.urdf.xacro
jetsoncar_ws/src/duckietown_gazebo/: CMakeLists.txt  package.xml
jetsoncar_ws/src/duckietown_gazebo/launch/: demo_1_duckbot.launch  demo_2_duckbots.launch  demo_3_duckbots.launch  main.launch  spawn_duckbot.launch
jetsoncar_ws/src/duckietown_gazebo/launch/include/: duckietown.launch.xml  head_camera.launch.xml
jetsoncar_ws/src/duckietown_gazebo/models/gazebo_duck/: model.sdf
jetsoncar_ws/src/duckietown_gazebo/models/road_empty/: model-1_4.sdf  model.config  model.sdf
jetsoncar_ws/src/duckietown_gazebo/models/road_empty/materials/scripts/: empty.material
jetsoncar_ws/src/duckietown_gazebo/models/road_plane/: model-1_4.sdf  model.sdf
jetsoncar_ws/src/duckietown_gazebo/models/road_plane/materials/scripts/: plane.material
jetsoncar_ws/src/duckietown_gazebo/models/road_plane_with_red_mark/: model-1_4.sdf  model.config  model.sdf
jetsoncar_ws/src/duckietown_gazebo/models/road_plane_with_red_mark/materials/scripts/: road_r_m.material
jetsoncar_ws/src/duckietown_gazebo/models/road_plane_without_marks/: model-1_4.sdf  model.config  model.sdf
jetsoncar_ws/src/duckietown_gazebo/models/road_plane_without_marks/materials/scripts/: road_no_m.material
jetsoncar_ws/src/duckietown_gazebo/models/semaforo_south/: model.sdf
jetsoncar_ws/src/duckietown_gazebo/worlds/: main.world
jetsoncar_ws/src/launch_files/: CMakeLists.txt  package.xml  package_documentation.md
jetsoncar_ws/src/launch_files/launch/: racecar.launch  racecar_teleop.launch
jetsoncar_ws/src/racecar_command_controllers/: CMakeLists.txt  package.xml
jetsoncar_ws/src/racecar_command_controllers/src/: ackermann_controller.py  (+2 more)
jetsoncar_ws/src/racecar_command_interface/: CMakeLists.txt  package.xml
jetsoncar_ws/src/racecar_description/: CMakeLists.txt  package.xml
jetsoncar_ws/src/racecar_hardware_interface/: CMakeLists.txt  package.xml
jetsoncar_ws/src/racecar_teleop/: CMakeLists.txt  README.md  package.xml
jetsoncar_ws/src/realsense2_description/: CMakeLists.txt
jetsoncar_ws/src/realsense2_description/urdf/: _d415.urdf.xacro  _d435.urdf.xacro  test_d415_camera.urdf.xacro
jetsoncar_ws/src/realsense2_jetson/: CMakeLists.txt  package.xml
jetsoncar_ws/src/temp_racecar_hardware_interface/: CMakeLists.txt  package.xml
realsense2_camera/urdf/: test_r410_camera.urdf.xacro
scripts/: .jetson.sh.swp  controller.sh  jetson.sh  load_model.sh  network.sh  rt_converter.py  script_examples.txt  setup.sh
scripts/jetsonhacks/buildLibrealsense2TX/: .buildPatchedKernel.sh.swp
(+78 files in other folders)
