<?xml version="1.0"?>
<package>
  <name>duckietown_gazebo</name>
  <version>0.0.0</version>
  <description>Duckietown world launch</description>

  <maintainer email="rtellez@theconstructsim.com">Ricardo Tellez</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>duckietown_msgs</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models:${GAZEBO_MODEL_PATH}"/>
  </export>
</package>
